--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "dependencies": {
         "oboe": "2.1.3",
         "underscore": "1.8.3",
-        "web3-core-helpers": "1.0.0-beta.27"
+        "web3-core-helpers": "git+https://github.com/lemengbin/web3-core-helpers.git#1.0.0-beta.27"
     }
 }
